(Bug Fix) Bug: Method org.gwt.mosaic.ui.client.list.FilterProxyListModel.filter(Object) invokes inefficient new Integer(int) constructor; use Integer.valueOf(int) instead